--- a/odoo-api/pyproject.toml
+++ b/odoo-api/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "pandas (>=2.2.3,<3.0.0)",
+    "decouple (>=0.0.7,<0.0.8)"
 ]
 
 [tool.poetry]
