--- a/odoo-api/pyproject.toml
+++ b/odoo-api/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
-    "decouple (>=0.0.7,<0.0.8)"
+    "python-decouple (>=3.8,<4.0)",
 ]
 
 [tool.poetry]
