--- a/odoo-api/pyproject.toml
+++ b/odoo-api/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "odoo-api"
-version = "1.1.4"
+version = "1.1.5"
 description = ""
 authors = [
     {name = "bastianibanez",email = "bastian.miba@gmail.com"}
@@ -17,6 +17,9 @@ dependencies = [
 [tool.poetry]
 packages = [{include = "odoo_api", from = "src"}]
 
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
