--- a/slack_api/pyproject.toml
+++ b/slack_api/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
-name = "slack"
+name = "slack_api"
 version = "0.1.0"
 description = ""
 authors = [
     {name = "NotoriosTI",email = "ti@notorios.cl"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<4.0"
 dependencies = [
 ]
 
