--- a/slack_api/pyproject.toml
+++ b/slack_api/pyproject.toml
@@ -6,8 +6,10 @@ authors = [
     {name = "NotoriosTI",email = "ti@notorios.cl"}
 ]
 readme = "README.md"
-requires-python = ">=3.13,<4.0"
+requires-python = ">=3.12,<4.0"
 dependencies = [
+    "slack-sdk (>=3.35.0,<4.0.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)"
 ]
 
 [tool.poetry]
