--- a/slack-api/pyproject.toml
+++ b/slack-api/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "slack_api"
-version = "0.1.4"
+version = "0.1.5"
 description = ""
 authors = [
     {name = "NotoriosTI",email = "ti@notorios.cl"}
@@ -8,8 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12,<4.0"
 dependencies = [
-    "slack-sdk (>=3.35.0,<4.0.0)",
-    "python-dotenv (>=1.1.0,<2.0.0)"
+    "python-dotenv (>=1.1.0,<2.0.0)",
+    "slack-sdk (>=3.35.0,<4.0.0)"
 ]
 
 [tool.poetry]
