--- a/odoo-api/pyproject.toml
+++ b/odoo-api/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
 packages = [{include = "odoo_api", from = "src"}]
 
 [tool.pyright]
-venvPath = "."
+venvpath = "."
 venv = ".venv"
 
 [build-system]
