--- a/odoo-api/pyproject.toml
+++ b/odoo-api/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "odoo-api"
-version = "2.1.0"
+version = "2.2.0"
 description = ""
 authors = [
     {name = "bastianibanez",email = "bastian.miba@gmail.com"}
@@ -12,6 +12,7 @@ dependencies = [
     "python-decouple (>=3.8,<4.0)",
     "langchain (>=0.3.25,<0.4.0)",
     "langgraph (>=0.4.5,<0.5.0)",
+    "pytz (>=2025.2,<2026.0)",
 ]
 
 [tool.poetry]
