Fix: Use service name for database connection in Docker
- Changed DB_HOST from 127.0.0.1 to cloud-sql-proxy in docker-compose.prod.yml
- Enables proper container-to-container communication in Docker network
- Fixes database connection refused error

--- a/sales-engine/deployment/docker-compose.prod.yml
+++ b/sales-engine/deployment/docker-compose.prod.yml
@@ -27,7 +27,7 @@ services:
     environment:
       - ENVIRONMENT=production
       - GCP_PROJECT_ID=${PROJECT_ID}
-      - DB_HOST=127.0.0.1 # The host is the proxy service
+      - DB_HOST=cloud-sql-proxy # The host is the proxy service
       - DB_PORT=5432
       - USE_TEST_ODOO=false  # Ensures we use odoo_prod
       # DB_NAME, DB_USER, DB_PASSWORD will be fetched from Secret Manager
