docs: update documentation and bump version to 0.1.2
- Update README.md with comprehensive documentation:
  - Add detailed modular architecture explanation
  - Document incremental synchronization strategy (95-99% efficiency)
  - Explain UPSERT behavior for new vs existing products
  - Add hybrid search capabilities documentation
  - Include comprehensive testing guide
  - Add troubleshooting and performance optimization sections
  - Document all configuration options and deployment

- Update pyproject.toml:
  - Bump version from 0.1.1 to 0.1.2
  - Update entry point to use new sync_manager module
  - Maintain all dependencies and project metadata

- Update poetry.lock:
  - Sync dependencies after odoo-api library updates
  - Ensure all packages are properly locked

This version represents a major architectural improvement with full
modular design, comprehensive testing, and detailed documentation.

--- a/product-engine/pyproject.toml
+++ b/product-engine/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "product-engine"
-version = "0.1.1"
+version = "0.1.2"
 description = "Products catalog synchronization engine for Odoo to PostgreSQL with OpenAI embeddings"
 authors = [
     {name = "bastianibanez", email = "bastian.miba@gmail.com"}
@@ -28,8 +28,7 @@ dev = [
 ]
 
 [project.scripts]
-run-products-sync = "product_engine.main:main"
-create-products-table = "product_engine.database_updater:create_table_main"
+run-products-sync = "db_manager.sync_manager:main"
 
 [tool.poetry]
 packages = [{include = "product_engine", from = "src"}]
