--- a/sales-engine/pyproject.toml
+++ b/sales-engine/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "sales-engine"
-version = "0.2.0"
+version = "0.3.0"
 description = "Sales data engine for Odoo to PostgreSQL synchronization"
 authors = [
     {name = "bastianibanez", email = "bastian.miba@gmail.com"}
@@ -13,8 +13,8 @@ dependencies = [
     "google-cloud-secret-manager>=2.16.0",
     "python-decouple>=3.8",
     "structlog>=24.0.0",
-    "odoo-api @ git+https://github.com/NotoriosTI/libraries.git@sales-engine#subdirectory=odoo-api",
-    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@sales-engine#subdirectory=config-manager",
+    "odoo-api @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=odoo-api",
+    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
 ]
 
 [project.optional-dependencies]
