--- a/slack-api/pyproject.toml
+++ b/slack-api/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "python-dotenv (>=1.1.0,<2.0.0)",
     "slack-sdk (>=3.35.0,<4.0.0)",
     "slack-bolt (>=1.23.0,<2.0.0)",
-    "openai (>=1.91.0,<2.0.0)"
+    "openai (>=1.91.0,<2.0.0)",
+    "requests (>=2.32.4,<3.0.0)"
 ]
 
 [tool.poetry]
