--- a/prompt-assistant/pyproject.toml
+++ b/prompt-assistant/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12,<4.0"
+requires-python = ">=3.13,<4.0"
 dependencies = [
     "langgraph (>=0.5.1,<0.6.0)",
     "pydantic (>=2.11.7,<3.0.0)",
@@ -14,6 +14,8 @@ dependencies = [
     "python-dotenv (>=1.1.1,<2.0.0)",
     "langchain-openai (>=0.3.27,<0.4.0)",
     "langchain (>=0.3.26,<0.4.0)",
+    "slack-api @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=slack-api",
+    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
 ]
 
 [tool.poetry]
