--- a/slack-api/pyproject.toml
+++ b/slack-api/pyproject.toml
@@ -6,13 +6,14 @@ authors = [
     {name = "NotoriosTI",email = "ti@notorios.cl"}
 ]
 readme = "README.md"
-requires-python = ">=3.12,<4.0"
+requires-python = ">=3.13,<4.0"
 dependencies = [
     "python-dotenv (>=1.1.0,<2.0.0)",
     "slack-sdk (>=3.35.0,<4.0.0)",
     "slack-bolt (>=1.23.0,<2.0.0)",
     "openai (>=1.91.0,<2.0.0)",
-    "requests (>=2.32.4,<3.0.0)"
+    "requests (>=2.32.4,<3.0.0)",
+    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
 ]
 
 [tool.poetry]
