--- a/sales-engine/deployment/docker-compose.prod.yml
+++ b/sales-engine/deployment/docker-compose.prod.yml
@@ -6,12 +6,15 @@
 # Key Features:
 #   - Uses the pre-built production Docker image.
 #   - Passes environment variables directly (no .env file).
-#   - Connects only to the Cloud SQL Auth Proxy.
+#   - Connects to the shared Cloud SQL Auth Proxy.
 #
 # Usage:
 #   This file is typically used by deployment scripts or CI/CD pipelines.
 #   To run manually:
 #   docker-compose -f deployment/docker-compose.prod.yml up
+#
+# IMPORTANT: This service requires the shared-cloud-sql-proxy to be running
+# Use the shared proxy from product-engine: docker-compose -f /opt/product-engine/docker-compose.shared-proxy.yml up -d
 #
 version: '3.8'
 
@@ -22,28 +25,15 @@ services:
     # Replace with your actual image path
     image: gcr.io/${PROJECT_ID}/sales-engine:latest
     container_name: sales-engine-prod
-    restart: unless-stopped
+    restart: "no"
     # In production, environment variables are passed directly by the orchestrator
     environment:
       - ENVIRONMENT=production
       - GCP_PROJECT_ID=${PROJECT_ID}
-      - DB_HOST=cloud-sql-proxy # The host is the proxy service
+      - DB_HOST=127.0.0.1  # Connect to shared proxy via localhost
       - DB_PORT=5432
       - USE_TEST_ODOO=false  # Ensures we use odoo_prod
       # DB_NAME, DB_USER, DB_PASSWORD will be fetched from Secret Manager
-    # Depends on the Cloud SQL proxy to be running
-    depends_on:
-      - cloud-sql-proxy
-
-  # Cloud SQL Auth Proxy service
-  # This is the only way the application connects to the database in production
-  cloud-sql-proxy:
-    image: gcr.io/cloudsql-docker/gce-proxy:1.33.2
-    container_name: cloud-sql-proxy-prod
-    restart: unless-stopped
-    # The command to start the proxy with stable v1 syntax using temp instance
-    command: /cloud_sql_proxy -instances=${PROJECT_ID}:${REGION}:${INSTANCE}-temp=tcp:0.0.0.0:5432
-    # In production environment on GCE, the proxy uses the attached service account
-    # No credentials file needed when running on GCE with proper service account
-    ports:
-      - "5432:5432"
+    # Use host network for direct access to shared proxy
+    network_mode: "host"
+    # No depends_on needed since we use host networking and shared proxy runs separately
