--- a/sales-engine/pyproject.toml
+++ b/sales-engine/pyproject.toml
@@ -12,9 +12,9 @@ dependencies = [
     "psycopg2-binary>=2.9.0",
     "google-cloud-secret-manager>=2.16.0",
     "python-decouple>=3.8",
-    "structlog>=24.0.0",
     "odoo-api @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=odoo-api",
     "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
+    "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=dev-utils",
 ]
 
 [project.optional-dependencies]
