--- a/sales-engine/pyproject.toml
+++ b/sales-engine/pyproject.toml
@@ -15,6 +15,10 @@ dependencies = [
     "odoo-api @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=odoo-api",
     "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
     "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=dev-utils",
+    "matplotlib (>=3.10.3,<4.0.0)",
+    "statsmodels (>=0.14.5,<0.15.0)",
+    "scikit-learn (>=1.7.1,<2.0.0)",
+    "seaborn (>=0.13.0,<0.14.0)",
 ]
 
 [project.optional-dependencies]
