--- a/sales-engine/pyproject.toml
+++ b/sales-engine/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "statsmodels (>=0.14.5,<0.15.0)",
     "scikit-learn (>=1.7.1,<2.0.0)",
     "seaborn (>=0.13.0,<0.14.0)",
+    "prophet (>=1.1.7,<2.0.0)",
 ]
 
 [project.optional-dependencies]
