--- a/slack-api/pyproject.toml
+++ b/slack-api/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "slack-bolt (>=1.23.0,<2.0.0)",
     "openai (>=1.91.0,<2.0.0)",
     "requests (>=2.32.4,<3.0.0)",
-    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=config-manager",
+    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@patch/prod-loop#subdirectory=config-manager",
 ]
 
 [tool.poetry]
