--- a/sales-engine/pyproject.toml
+++ b/sales-engine/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "scikit-learn (>=1.7.1,<2.0.0)",
     "seaborn (>=0.13.0,<0.14.0)",
     "prophet (>=1.1.7,<2.0.0)",
+    "structlog (>=25.4.0,<26.0.0)",
 ]
 
 [project.optional-dependencies]
