--- a/odoo-api/pyproject.toml
+++ b/odoo-api/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "langchain (>=0.3.25,<0.4.0)",
     "langgraph (>=0.4.5,<0.5.0)",
     "pytz (>=2025.2,<2026.0)",
-    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@feature/branch-switcher#subdirectory=config-manager",
+    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=config-manager",
 ]
 
 [tool.poetry]
