--- a/shopify/pyproject.toml
+++ b/shopify/pyproject.toml
@@ -9,10 +9,9 @@ readme = "README.md"
 requires-python = ">=3.12,<4.0"
 dependencies = [
     "requests (>=2.32.3,<3.0.0)",
-    "pydantic (>=2.11.4,<3.0.0)",
-    "pydantic-settings (>=2.9.1,<3.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
-    "beautifulsoup4 (>=4.13.4,<5.0.0)"
+    "beautifulsoup4 (>=4.13.4,<5.0.0)",
+    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager"
 ]
 
 [tool.poetry]
