--- a/odoo-api/pyproject.toml
+++ b/odoo-api/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "langchain (>=0.3.25,<0.4.0)",
     "langgraph (>=0.4.5,<0.5.0)",
     "pytz (>=2025.2,<2026.0)",
-    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
+    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@odoo-sync#subdirectory=config-manager",
     "pydantic (>=2.11.7,<3.0.0)",
 ]
 
