odoo-engine: TDD sync incremental, delete handling and basic dependency pipeline
- Add tests for incremental sync, delete detection and pipeline ordering (tests/odoo-sync)
- Implement incremental sync per-model using SyncState (_get_last_synced/_set_last_synced)
- Parse and persist Odoo write_date as datetime
- Detect remote deletes and support delete policies: mark_inactive / delete
- Add sqlite fallback upsert for tests; retain INSERT...ON CONFLICT for Postgres
- Adjust model PKs for sqlite compatibility in tests
- Add conftest to include src in PYTHONPATH for tests

Notes: tests added pass locally (5 passed). Further work: requeue for dependency edge-cases, retries/backoff, CI with Postgres and Alembic migrations.

--- a/odoo-engine/pyproject.toml
+++ b/odoo-engine/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "odoorpc (>=0.10.1,<0.11.0)",
   "pandas (>=2.0,<3.0)",
   "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@odoo-sync#subdirectory=dev-utils",
+  "pytest (>=8.4.2,<9.0.0)",
 ]
 
 [tool.poetry]
