--- a/odoo-engine/pyproject.toml
+++ b/odoo-engine/pyproject.toml
@@ -8,14 +8,15 @@ requires-python = ">=3.13,<4.0"
 dependencies = [
   "python-decouple (>=3.8,<4.0)",
   "pytz (>=2025.2,<2026.0)",
-  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@odoo-sync#subdirectory=config-manager",
   "psycopg2-binary",
   "sqlalchemy (>=2.0)",
   "odoorpc (>=0.10.1,<0.11.0)",
   "pandas (>=2.0,<3.0)",
-  "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@odoo-sync#subdirectory=dev-utils",
   "pytest (>=8.4.2,<9.0.0)",
   "openai (>=1.50.2,<2.0.0)",
+  "tiktoken (>=0.4.0,<0.9.0)",
+  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@odoo-sync#subdirectory=config-manager",
+  "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@odoo-sync#subdirectory=dev-utils",
 ]
 
 [tool.poetry]
