--- a/odoo-engine/pyproject.toml
+++ b/odoo-engine/pyproject.toml
@@ -15,8 +15,8 @@ dependencies = [
   "pytest (>=8.4.2,<9.0.0)",
   "openai (>=1.50.2,<2.0.0)",
   "tiktoken (>=0.4.0,<0.9.0)",
-  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@odoo-sync#subdirectory=config-manager",
-  "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@odoo-sync#subdirectory=dev-utils",
+  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
+  "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=dev-utils",
 ]
 
 [tool.poetry]
