--- a/shopify/pyproject.toml
+++ b/shopify/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
-    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@odoo-sync#subdirectory=config-manager"
+    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager"
 ]
 
 [tool.poetry]
