Create sub module for sync logic

--- a/odoo-engine/deployment/Dockerfile
+++ b/odoo-engine/deployment/Dockerfile
@@ -52,5 +52,5 @@ ENV PATH="/app/.venv/bin:$PATH"
 ENV PYTHONPATH="/app/src:$PYTHONPATH"
 
 # Default command
-CMD ["python", "-m", "odoo_engine.main"]
+CMD ["python", "-m", "odoo_engine.sync_manager.main"]
 
