--- a/odoo-api/pyproject.toml
+++ b/odoo-api/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "python-decouple (>=3.8,<4.0)",
     "langchain (>=0.3.25,<0.4.0)",
     "pytz (>=2025.2,<2026.0)",
-    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
+    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=config-manager",
     "pydantic (>=2.11.7,<3.0.0)",
 ]
 
