--- a/config-manager/pyproject.toml
+++ b/config-manager/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "config-manager"
-version = "1.3.0"
+version = "1.4.0"
 description = "Centralized configuration and secret management"
 authors = [{ name = "bastianibanez", email = "bastian.miba@gmail.com" }]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13, <4.0"
 dependencies = ["python-decouple>=3.8", "google-cloud-secret-manager>=2.16.0"]
 
 [project.optional-dependencies]
