--- a/chatwoot-processor/pyproject.toml
+++ b/chatwoot-processor/pyproject.toml
@@ -25,4 +25,5 @@ dev = [
   "httpx (>=0.28.1,<0.29.0)",
   "black (>=25.9.0,<26.0.0)",
   "isort (>=7.0.0,<8.0.0)",
+  "rich (>=14.2.0,<15.0.0)",
 ]
