--- a/odoo-engine/pyproject.toml
+++ b/odoo-engine/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "openai (>=1.50.2,<2.0.0)",
   "tiktoken (>=0.4.0,<0.9.0)",
   "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
+  "env-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=env-manager",
   "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=dev-utils",
   "google-cloud-bigquery (>=3.38.0,<4.0.0)",
   "scikit-learn (>=1.7.2,<2.0.0)",
