--- a/odoo-engine/pyproject.toml
+++ b/odoo-engine/pyproject.toml
@@ -15,9 +15,9 @@ dependencies = [
   "pytest (>=8.4.2,<9.0.0)",
   "openai (>=1.50.2,<2.0.0)",
   "tiktoken (>=0.4.0,<0.9.0)",
-  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
-  "env-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=env-manager",
-  "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=dev-utils",
+  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@refactor/env-manager#subdirectory=config-manager",
+  "env-manager @ git+https://github.com/NotoriosTI/libraries.git@refactor/env-manager#subdirectory=env-manager",
+  "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@refactor/env-manager#subdirectory=dev-utils",
   "google-cloud-bigquery (>=3.38.0,<4.0.0)",
   "scikit-learn (>=1.7.2,<2.0.0)",
   "db-dtypes (>=1.4.3,<2.0.0)",
