Migracion de env-manager para sales-engine, falta hacer test

--- a/sales-engine/pyproject.toml
+++ b/sales-engine/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "python-decouple>=3.8",
     "odoo-api @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=odoo-api",
     "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
-    "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=dev-utils",
+    "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=dev-utils",
+    "env-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=env-manager",
     "matplotlib (>=3.10.3,<4.0.0)",
     "statsmodels (>=0.14.5,<0.15.0)",
     "scikit-learn (>=1.7.1,<2.0.0)",
