--- a/config-manager/pyproject.toml
+++ b/config-manager/pyproject.toml
@@ -5,7 +5,7 @@ description = "Centralized configuration and secret management"
 authors = [{ name = "bastianibanez", email = "bastian.miba@gmail.com" }]
 readme = "README.md"
 requires-python = ">=3.13, <4.0"
-dependencies = ["python-decouple>=3.8", "google-cloud-secret-manager>=2.16.0"]
+dependencies = ["python-decouple>=3.8", "google-cloud-secret-manager>=2.16.0", "dotenv (>=0.9.9,<0.10.0)"]
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0.0"]
