Dependency branch changed to main

--- a/chatwoot-processor/pyproject.toml
+++ b/chatwoot-processor/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
   "fastapi (>=0.121.0,<0.122.0)",
   "uvicorn (>=0.38.0,<0.39.0)",
   "pydantic (>=2.12.3,<3.0.0)",
-  "env-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=env-manager",
+  "env-manager @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=env-manager",
   "sqlalchemy[asyncio] (>=2.0,<3.0)",
   "aiosqlite (>=0.20,<0.21)",
   "greenlet (>=3.1.1,<4.0.0)",
